# main.go
@@ -84,7 +84,7 @@ func main() {
 	api:=router.Group("/pub")
 	api.GET("/stock/info", controls.StockInfoHandler)
 	//api.GET("/stock/aggre_info", StockAggreHandler)
-	api.GET("/stock/aggre_info/:code/:timestamp", controls.StockAggreHandler)
+	api.GET("/stock/aggre_info/:code/:data_type/:timestamp", controls.StockAggreHandler)
 	api.GET("/stock/stat", NodeStatHandler)
 	api.GET("/stock/stats", NodeStatsHandler)
 	api.GET("/stock/any_api", controls.NodeAnyApiHandler)
@@ -95,7 +95,7 @@ func main() {
 	api.GET("/internal/dex/token_info/:token/:timestamp", controls.TokenInfoHandler)
 	api.GET("/internal/coin_price/:coin/:vs_coin", controls.CoinPriceHandler)
 	api.GET("/coin_price/:coin/:vs_coin", controls.CoinPriceSignHandler)
-	api.GET("/dex/token_price/:token/:timestamp", controls.TokenPriceSignHandler)
+	api.GET("/dex/token_price/:token/:data_type/:timestamp", controls.TokenPriceSignHandler)
 	api.GET("/dex/token_day_datas/:token/:days/:timestamp", controls.TokenDayDatasHandler)
 	api.GET("/dex/token_chart_prices/:token/:count/:interval/:timestamp", controls.TokenDayPricesHandler)
 	//api.POST("/stock/sign_verify", VerifyInfoHandler)
